--- a/packages/site-kit/package.json
+++ b/packages/site-kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uptrademedia/site-kit",
-  "version": "1.0.7",
+  "version": "1.0.10",
   "description": "Complete client-side integration kit for Uptrade Portal - SEO, Analytics, Engage, Forms, Blog",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -46,6 +46,11 @@
       "import": "./dist/blog/index.mjs",
       "require": "./dist/blog/index.js",
       "types": "./dist/blog/index.d.ts"
+    },
+    "./blog/server": {
+      "import": "./dist/blog/server.mjs",
+      "require": "./dist/blog/server.js",
+      "types": "./dist/blog/server.d.ts"
     },
     "./commerce": {
       "import": "./dist/commerce/index.mjs",
