--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ lerna-debug.log*
 # Copilot instructions (contains credentials)
 .github/copilot-instructions.md
 
+# MCP configuration (contains database credentials)
+.vscode/mcp.json
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
